[gd_scene load_steps=22 format=3 uid="uid://o8vjxrpicjsm"]

[ext_resource type="Script" uid="uid://160pq47v64dn" path="res://scenes/menu/main_menu.gd" id="1_bk4ch"]
[ext_resource type="Texture2D" uid="uid://c3qodhvhxwf2v" path="res://assets/cards/arena_border_highlight.png" id="2_1a5y0"]
[ext_resource type="PackedScene" uid="uid://cqs72exlwm6at" path="res://scenes/menu/char_select.tscn" id="2_6qq11"]
[ext_resource type="Texture2D" uid="uid://ci2dh7hdi1ye4" path="res://assets/icons/gear.png" id="2_141tj"]
[ext_resource type="Texture2D" uid="uid://bpdpb3e74d2cu" path="res://assets/cards/arena_border_highlight_pressed.png" id="3_exiqm"]
[ext_resource type="Texture2D" uid="uid://8pvgp7ipunso" path="res://assets/portraits/solbadguy.png" id="3_n1nv2"]
[ext_resource type="Texture2D" uid="uid://b08j76upbucvr" path="res://assets/cards/arena_border_highlight_selected.png" id="4_4qgms"]
[ext_resource type="Texture2D" uid="uid://mn1hj4i3k7l7" path="res://assets/cards/card_border_highlight_selected.png" id="4_ekoth"]
[ext_resource type="Texture2D" uid="uid://ded5jrn5yju2j" path="res://assets/cards/card_border_highlight_pressed.png" id="5_xie03"]
[ext_resource type="AudioStream" uid="uid://0cjnajbh1p00" path="res://assets/sounds/match_available.mp3" id="6_6ru3f"]
[ext_resource type="AudioStream" uid="uid://bhetjnrl0n7o" path="res://assets/sounds/match_notification.mp3" id="7_pt1r5"]
[ext_resource type="AudioStream" uid="uid://d4bbavtwjd32l" path="res://assets/sounds/surface.mp3" id="8_4ktxj"]
[ext_resource type="AudioStream" uid="uid://bftf3ehq3hfho" path="res://assets/sounds/mainmenu_bgm.mp3" id="8_vcasp"]
[ext_resource type="PackedScene" uid="uid://dy60rn4avbtbt" path="res://scenes/menu/match_queue_item.tscn" id="9_ngekl"]
[ext_resource type="PackedScene" uid="uid://bor5msyih7c5j" path="res://scenes/menu/modal_list.tscn" id="9_ro6xo"]
[ext_resource type="PackedScene" uid="uid://b8kmmrd5jmqdd" path="res://scenes/game/modal_dialog.tscn" id="10_stodf"]
[ext_resource type="PackedScene" uid="uid://dx5u3h8ppeab0" path="res://scenes/menu/preferences_window.tscn" id="12_7sva6"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_i6bch"]
texture = ExtResource("4_ekoth")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tii02"]
texture = ExtResource("5_xie03")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0f2dl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_22gnv"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
script = ExtResource("1_bk4ch")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0.482353, 0.482353, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 10.0
offset_top = 4.0
offset_right = 326.0
offset_bottom = 48.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 34
text = "Exceed GG Fan Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
offset_left = 1174.0
offset_top = 5.0
offset_right = 1424.0
offset_bottom = 355.0
texture_normal = ExtResource("2_1a5y0")
texture_pressed = ExtResource("3_exiqm")
texture_hover = ExtResource("4_4qgms")

[node name="MarginContainer" type="MarginContainer" parent="SettingsButton"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 100.0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="GearIcon" type="TextureRect" parent="SettingsButton/MarginContainer"]
layout_mode = 2
texture = ExtResource("2_141tj")
expand_mode = 1

[node name="AIBox" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 5.0
offset_right = 867.0
offset_bottom = 125.0

[node name="VSAIBox" type="HBoxContainer" parent="AIBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="StartButton" type="Button" parent="AIBox/VSAIBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Play AI"

[node name="OpponentChooser" type="PanelContainer" parent="AIBox/VSAIBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="AIBox/VSAIBox/OpponentChooser"]
custom_minimum_size = Vector2(250, 120)
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="AIBox/VSAIBox/OpponentChooser/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="AIBox/VSAIBox/OpponentChooser/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="AIBox/VSAIBox/OpponentChooser/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Choose AI Fighter"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="AIBox/VSAIBox/OpponentChooser/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CharPortrait" type="TextureRect" parent="AIBox/VSAIBox/OpponentChooser/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_n1nv2")
expand_mode = 3
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="AIBox/VSAIBox/OpponentChooser/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10

[node name="CharName" type="Label" parent="AIBox/VSAIBox/OpponentChooser/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Sol Badguy"

[node name="ChangePlayerCharacterButton" type="Button" parent="AIBox/VSAIBox/OpponentChooser"]
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxTexture_i6bch")
theme_override_styles/pressed = SubResource("StyleBoxTexture_tii02")
theme_override_styles/normal = SubResource("StyleBoxEmpty_0f2dl")

[node name="MenuList" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 354.0
offset_top = 141.0
offset_right = 935.0
offset_bottom = 621.0

[node name="JoinBox" type="HBoxContainer" parent="MenuList"]
layout_mode = 2

[node name="JoinButton" type="Button" parent="MenuList/JoinBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
disabled = true
text = "Join Room"

[node name="RoomNameBox" type="LineEdit" parent="MenuList/JoinBox"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "DefaultRoom"
placeholder_text = "Room Name"
alignment = 1
select_all_on_focus = true

[node name="CancelButton" type="Button" parent="."]
layout_mode = 2
offset_left = 354.0
offset_top = 235.0
offset_right = 935.0
offset_bottom = 321.0
theme_override_font_sizes/font_size = 60
text = "Cancel"

[node name="Queues" type="HBoxContainer" parent="."]
layout_mode = 2
offset_left = 378.0
offset_top = 387.0
offset_right = 908.0
offset_bottom = 558.0
theme_override_constants/separation = 40

[node name="QueueItem" parent="Queues" instance=ExtResource("9_ngekl")]
layout_mode = 2

[node name="QueueItem2" parent="Queues" instance=ExtResource("9_ngekl")]
layout_mode = 2

[node name="QueueItem3" parent="Queues" instance=ExtResource("9_ngekl")]
layout_mode = 2

[node name="PlayerChooser" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 60.0
offset_right = 320.0
offset_bottom = 180.0

[node name="MarginContainer" type="MarginContainer" parent="PlayerChooser"]
custom_minimum_size = Vector2(250, 120)
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerChooser/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PlayerChooser/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PlayerChooser/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Choose Your Fighter"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerChooser/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CharPortrait" type="TextureRect" parent="PlayerChooser/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_n1nv2")
expand_mode = 3
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="PlayerChooser/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10

[node name="CharName" type="Label" parent="PlayerChooser/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Sol Badguy"

[node name="ChangePlayerCharacterButton" type="Button" parent="PlayerChooser"]
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxTexture_i6bch")
theme_override_styles/pressed = SubResource("StyleBoxTexture_tii02")
theme_override_styles/normal = SubResource("StyleBoxEmpty_0f2dl")

[node name="PlayerNameBox" type="TextEdit" parent="."]
custom_minimum_size = Vector2(100, 50)
layout_mode = 0
offset_left = 10.0
offset_top = 193.0
offset_right = 325.0
offset_bottom = 249.0
theme_override_font_sizes/font_size = 34
placeholder_text = "Player Name"
editable = false

[node name="UpdateNameButton" type="Button" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 256.0
offset_right = 317.0
offset_bottom = 309.0
theme_override_font_sizes/font_size = 32
text = "Update Name"

[node name="LoadReplayButton" type="Button" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 598.0
offset_right = 317.0
offset_bottom = 651.0
theme_override_font_sizes/font_size = 32
text = "Load Replay"

[node name="PlayerList" type="ItemList" parent="."]
layout_mode = 0
offset_left = 968.0
offset_top = 193.0
offset_right = 1272.0
offset_bottom = 529.0
theme_override_font_sizes/font_size = 24
item_count = 2
item_0/text = "Player"
item_1/text = "Player 2"

[node name="PlayerListLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 968.0
offset_top = 137.0
offset_right = 1256.0
offset_bottom = 184.0
theme_override_font_sizes/font_size = 34
text = "Player  -  Room"

[node name="ReconnectToServerButton" type="Button" parent="."]
layout_mode = 0
offset_left = 353.0
offset_top = 568.0
offset_right = 937.0
offset_bottom = 666.0
theme_override_font_sizes/font_size = 32
text = "Reconnect to 
Server"

[node name="ServerStatusLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 352.0
offset_top = 662.0
offset_right = 936.0
offset_bottom = 707.0
theme_override_font_sizes/font_size = 32
text = "Connecting to server."
horizontal_alignment = 1

[node name="MatchAvailableAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_6ru3f")

[node name="MatchStartingAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_pt1r5")

[node name="SpecialSelectAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_4ktxj")
volume_db = -6.0

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_vcasp")
volume_db = -9.0

[node name="PlayerListContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 968.0
offset_top = 10.0
offset_right = 1256.0
offset_bottom = 63.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_22gnv")

[node name="PlayerListHBox" type="HBoxContainer" parent="PlayerListContainer"]
layout_mode = 2
mouse_filter = 2

[node name="PlayersButton" type="Button" parent="PlayerListContainer/PlayerListHBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Players"

[node name="PlayerCount" type="Label" parent="PlayerListContainer/PlayerListHBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "10"

[node name="RoomListContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 968.0
offset_top = 70.0
offset_right = 1256.0
offset_bottom = 123.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_22gnv")

[node name="RoomListHBox" type="HBoxContainer" parent="RoomListContainer"]
layout_mode = 2
mouse_filter = 2

[node name="MatchesButton" type="Button" parent="RoomListContainer/RoomListHBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Matches"

[node name="MatchCount" type="Label" parent="RoomListContainer/RoomListHBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "10"

[node name="CharSelect" parent="." instance=ExtResource("2_6qq11")]
visible = false

[node name="ModalList" parent="." instance=ExtResource("9_ro6xo")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="ModalDialog" parent="." instance=ExtResource("10_stodf")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="VersionContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 664.0
offset_right = 256.0
offset_bottom = 716.0

[node name="MarginContainer" type="MarginContainer" parent="VersionContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VersionContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ClientVersionHeader" type="Label" parent="VersionContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Build:"

[node name="ClientVersion" type="Label" parent="VersionContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "##"

[node name="PreferencesWindow" parent="." instance=ExtResource("12_7sva6")]
visible = false

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 1
size = Vector2i(800, 400)
ok_button_text = "Open"
file_mode = 0
access = 2

[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="AIBox/VSAIBox/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="AIBox/VSAIBox/OpponentChooser/ChangePlayerCharacterButton" to="." method="_on_change_player_character_button_pressed" binds= [false]]
[connection signal="pressed" from="MenuList/JoinBox/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="text_changed" from="MenuList/JoinBox/RoomNameBox" to="." method="_on_room_name_box_text_changed"]
[connection signal="pressed" from="CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="PlayerChooser/ChangePlayerCharacterButton" to="." method="_on_change_player_character_button_pressed" binds= [true]]
[connection signal="focus_entered" from="PlayerNameBox" to="." method="_on_player_name_box_focus_entered"]
[connection signal="text_changed" from="PlayerNameBox" to="." method="_on_player_name_box_text_changed"]
[connection signal="pressed" from="UpdateNameButton" to="." method="_on_update_name_button_pressed"]
[connection signal="pressed" from="LoadReplayButton" to="." method="_on_load_replay_button_pressed"]
[connection signal="pressed" from="ReconnectToServerButton" to="." method="_on_reconnect_to_server_button_pressed"]
[connection signal="pressed" from="PlayerListContainer/PlayerListHBox/PlayersButton" to="." method="_on_players_button_pressed"]
[connection signal="pressed" from="RoomListContainer/RoomListHBox/MatchesButton" to="." method="_on_matches_button_pressed"]
[connection signal="close_character_select" from="CharSelect" to="." method="_on_char_select_close_character_select"]
[connection signal="select_character" from="CharSelect" to="." method="_on_char_select_select_character"]
[connection signal="join_match_pressed" from="ModalList" to="." method="_on_modal_list_join_match_pressed"]
[connection signal="observe_match_pressed" from="ModalList" to="." method="_on_modal_list_observe_match_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
